iommu/vt-d: Remove unused function (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13969,6 +13969,7 @@
 	patches.suse/iommu-arm-smmu-v3-sva-Remove-bond-refcount
 	patches.suse/dt-bindings-arm-smmu-Add-SM7150-GPU-SMMUv2
 	patches.suse/iommu-virtio-Add-__counted_by-for-struct-viommu_request-and-use-
+	patches.suse/iommu-vt-d-Remove-unused-function
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
