iommufd: Share iommufd_hwpt_alloc with IOMMUFD_OBJ_HWPT_NESTED (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13179,6 +13179,7 @@
 	patches.suse/iommufd-Rename-IOMMUFD_OBJ_HW_PAGETABLE-to-IOMMUFD_OBJ_HWPT_PAGI
 	patches.suse/iommufd-device-Wrap-IOMMUFD_OBJ_HWPT_PAGING-only-configurations
 	patches.suse/iommufd-Derive-iommufd_hwpt_paging-from-iommufd_hw_pagetable
+	patches.suse/iommufd-Share-iommufd_hwpt_alloc-with-IOMMUFD_OBJ_HWPT_NESTED
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
