iommu: Improve map/unmap sanity checks (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14031,6 +14031,7 @@
 	patches.suse/iommu-sun50i-Update-to-map-unmap-_pages
 	patches.suse/iommu-tegra-smmu-Update-to-map-unmap-_pages
 	patches.suse/iommu-Retire-map-unmap-ops
+	patches.suse/iommu-Improve-map-unmap-sanity-checks
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
