iommufd: Use the domain_alloc_user() op for domain allocation (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13149,6 +13149,7 @@
 	patches.suse/iommufd-Fix-spelling-errors-in-comments
 	patches.suse/iommufd-selftest-Iterate-idev_ids-in-mock_domain-s-alloc_hwpt-te
 	patches.suse/iommu-Add-new-iommu-op-to-create-domains-owned-by-userspace
+	patches.suse/iommufd-Use-the-domain_alloc_user-op-for-domain-allocation
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
