--- a/series.conf
+++ b/series.conf
@@ -14513,6 +14513,7 @@
 	patches.suse/iommu-Avoid-more-races-around-device-probe
 	patches.suse/iommu-vt-d-Support-enforce_cache_coherency-only-for-empty-domain
 	patches.suse/iommu-vt-d-Omit-devTLB-invalidation-requests-when-TES-0
+	patches.suse/iommu-vt-d-Disable-PCI-ATS-in-legacy-passthrough-mode
 	patches.suse/ACPI-video-Use-acpi_video_device-for-cooling-dev-dri.patch
 	patches.suse/cpufreq-amd-pstate-Fix-the-return-value-of-amd_pstat.patch
 	patches.suse/cpufreq-amd-pstate-Fix-scaling_min_freq-and-scaling_.patch
