vfio/cdx: Add parentheses between bitwise AND expression and logical NOT (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13099,6 +13099,7 @@
 	patches.suse/vfio-mlx5-Add-support-for-SAVING-in-chunk-mode
 	patches.suse/vfio-mlx5-Add-support-for-READING-in-chunk-mode
 	patches.suse/vfio-mlx5-Activate-the-chunk-mode-functionality
+	patches.suse/vfio-cdx-Add-parentheses-between-bitwise-AND-expression-and-logi
 	patches.suse/arm64-tegra-Fix-P3767-card-detect-polarity.patch
 	patches.suse/arm64-tegra-Fix-P3767-QSPI-speed.patch
 	patches.suse/arm64-tegra-Use-correct-interrupts-for-Tegra234-TKE.patch
