--- a/series.conf
+++ b/series.conf
@@ -13978,6 +13978,7 @@
 	patches.suse/iommu-amd-Consolidate-timeout-pre-define-to-amd_iommu_type.h
 	patches.suse/iommu-amd-Consolidate-logic-to-allocate-protection-domain
 	patches.suse/iommu-amd-Refactor-protection-domain-allocation-code
+	patches.suse/iommu-amd-Introduce-helper-functions-for-managing-GCR3-table
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
