--- a/series.conf
+++ b/series.conf
@@ -13085,6 +13085,7 @@
 	patches.suse/dm-crypt-account-large-pages-in-cc-n_allocated_pages-9793.patch
 	patches.suse/mmc-sdhci-pci-gli-A-workaround-to-allow-GL9750-to-en.patch
 	patches.suse/mmc-meson-gx-Remove-setting-of-CMD_CFG_ERROR.patch
+	patches.suse/cdx-add-support-for-bus-mastering
 	patches.suse/arm64-tegra-Fix-P3767-card-detect-polarity.patch
 	patches.suse/arm64-tegra-Fix-P3767-QSPI-speed.patch
 	patches.suse/arm64-tegra-Use-correct-interrupts-for-Tegra234-TKE.patch
