iommu/vt-d: Add helper to setup pasid nested translation (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13189,6 +13189,7 @@
 	patches.suse/iommufd-Add-data-structure-for-Intel-VT-d-stage-1-domain-allocat
 	patches.suse/iommu-vt-d-Extend-dmar_domain-to-support-nested-domain
 	patches.suse/iommu-vt-d-Add-helper-for-nested-domain-allocation
+	patches.suse/iommu-vt-d-Add-helper-to-setup-pasid-nested-translation
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
