--- a/series.conf
+++ b/series.conf
@@ -13167,6 +13167,7 @@
 	patches.suse/iommufd-Add-a-flag-to-skip-clearing-of-IOPTE-dirty
 	patches.suse/iommu-amd-Add-domain_alloc_user-based-domain-allocation
 	patches.suse/iommu-amd-Access-Dirty-bit-support-in-IOPTEs
+	patches.suse/iommu-vt-d-Access-Dirty-bit-support-for-SS-domains
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
