iommu: Do not use IOMMU_DOMAIN_DMA if CONFIG_IOMMU_DMA is not enabled (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14035,6 +14035,7 @@
 	patches.suse/iommu-iova-Make-the-rcache-depot-scale-better
 	patches.suse/iommu-iova-Manage-the-depot-list-size
 	patches.suse/iommu-Remove-duplicate-include
+	patches.suse/iommu-Do-not-use-IOMMU_DOMAIN_DMA-if-CONFIG_IOMMU_DMA-is-not-ena
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
