--- a/series.conf
+++ b/series.conf
@@ -14041,6 +14041,7 @@
 	patches.suse/iommu-change-iommu_map_sgtable-to-return-signed-values
 	patches.suse/iommu-Move-IOMMU_DOMAIN_BLOCKED-global-statics-to-ops-blocked_do
 	patches.suse/iommu-vt-d-Update-the-definition-of-the-blocking-domain
+	patches.suse/iommu-vt-d-Use-ops-blocked_domain
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
