--- a/series.conf
+++ b/series.conf
@@ -13091,6 +13091,7 @@
 	patches.suse/vfio-trivially-use-__aligned_u64-for-ioctl-structs
 	patches.suse/vfio-use-__aligned_u64-in-struct-vfio_device_gfx_plane_info
 	patches.suse/vfio-use-__aligned_u64-in-struct-vfio_device_ioeventfd
+	patches.suse/vfio-mlx5-Wake-up-the-reader-post-of-disabling-the-SAVING-migrat
 	patches.suse/arm64-tegra-Fix-P3767-card-detect-polarity.patch
 	patches.suse/arm64-tegra-Fix-P3767-QSPI-speed.patch
 	patches.suse/arm64-tegra-Use-correct-interrupts-for-Tegra234-TKE.patch
