--- a/series.conf
+++ b/series.conf
@@ -13162,6 +13162,7 @@
 	patches.suse/iommu-Add-iommu_domain-ops-for-dirty-tracking
 	patches.suse/iommufd-Add-a-flag-to-enforce-dirty-tracking-on-attach
 	patches.suse/iommufd-Add-IOMMU_HWPT_SET_DIRTY_TRACKING
+	patches.suse/iommufd-Add-IOMMU_HWPT_GET_DIRTY_BITMAP
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
