--- a/series.conf
+++ b/series.conf
@@ -13087,6 +13087,7 @@
 	patches.suse/mmc-meson-gx-Remove-setting-of-CMD_CFG_ERROR.patch
 	patches.suse/cdx-add-support-for-bus-mastering
 	patches.suse/vfio-add-bus-master-feature-to-device-feature-ioctl
+	patches.suse/vfio-cdx-add-bus-mastering-device-feature-support
 	patches.suse/arm64-tegra-Fix-P3767-card-detect-polarity.patch
 	patches.suse/arm64-tegra-Fix-P3767-QSPI-speed.patch
 	patches.suse/arm64-tegra-Use-correct-interrupts-for-Tegra234-TKE.patch
