--- a/series.conf
+++ b/series.conf
@@ -14005,6 +14005,7 @@
 	patches.suse/iommu-Allow-an-IDENTITY-domain-as-the-default_domain-in-ARM32
 	patches.suse/iommu-exynos-Implement-an-IDENTITY-domain
 	patches.suse/iommu-tegra-smmu-Implement-an-IDENTITY-domain
+	patches.suse/iommu-tegra-smmu-Support-DMA-domains-in-tegra
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
