--- a/series.conf
+++ b/series.conf
@@ -13098,6 +13098,7 @@
 	patches.suse/vfio-mlx5-Pre-allocate-chunks-for-the-STOP_COPY-phase
 	patches.suse/vfio-mlx5-Add-support-for-SAVING-in-chunk-mode
 	patches.suse/vfio-mlx5-Add-support-for-READING-in-chunk-mode
+	patches.suse/vfio-mlx5-Activate-the-chunk-mode-functionality
 	patches.suse/arm64-tegra-Fix-P3767-card-detect-polarity.patch
 	patches.suse/arm64-tegra-Fix-P3767-QSPI-speed.patch
 	patches.suse/arm64-tegra-Use-correct-interrupts-for-Tegra234-TKE.patch
