--- a/series.conf
+++ b/series.conf
@@ -13147,6 +13147,7 @@
 	patches.suse/firmware-raspberrypi-Fix-devm_rpi_firmware_get-docum.patch
 	patches.suse/soc-qcom-pmic_glink-fix-connector-type-to-be-Display.patch
 	patches.suse/iommufd-Fix-spelling-errors-in-comments
+	patches.suse/iommufd-selftest-Iterate-idev_ids-in-mock_domain-s-alloc_hwpt-te
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
