--- a/series.conf
+++ b/series.conf
@@ -14053,6 +14053,7 @@
 	patches.suse/s390-pci-Use-dma-iommu-layer
 	patches.suse/iommu-s390-Disable-deferred-flush-for-ISM-devices
 	patches.suse/iommu-dma-Allow-a-single-FQ-in-addition-to-per-CPU-FQs
+	patches.suse/iommu-dma-Use-a-large-flush-queue-and-timeout-for-shadow_on_flus
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
