--- a/series.conf
+++ b/series.conf
@@ -13989,6 +13989,7 @@
 	patches.suse/iommu-amd-Enable-device-ATS-PASID-PRI-capabilities-independently
 	patches.suse/iommu-amd-Initialize-iommu_device-max_pasids
 	patches.suse/iommu-amd-Remove-iommu_v2-module
+	patches.suse/iommu-amd-Remove-PPR-support
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
