--- a/series.conf
+++ b/series.conf
@@ -14012,6 +14012,7 @@
 	patches.suse/iommu-qcom_iommu-Add-an-IOMMU_IDENTITIY_DOMAIN
 	patches.suse/iommu-ipmmu-Add-an-IOMMU_IDENTITIY_DOMAIN
 	patches.suse/iommu-mtk_iommu-Add-an-IOMMU_IDENTITIY_DOMAIN
+	patches.suse/iommu-sun50i-Add-an-IOMMU_IDENTITIY_DOMAIN
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
