--- a/series.conf
+++ b/series.conf
@@ -13183,6 +13183,7 @@
 	patches.suse/iommu-Pass-in-parent-domain-with-user_data-to-domain_alloc_user-
 	patches.suse/iommufd-Add-a-nested-HW-pagetable-object
 	patches.suse/iommu-Add-iommu_copy_struct_from_user-helper
+	patches.suse/iommufd-selftest-Add-nested-domain-allocation-for-mock-domain
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
