--- a/series.conf
+++ b/series.conf
@@ -13176,6 +13176,7 @@
 	patches.suse/iommufd-selftest-Test-IOMMU_HWPT_GET_DIRTY_BITMAP_NO_CLEAR-flag
 	patches.suse/iommufd-Only-enforce-cache-coherency-in-iommufd_hw_pagetable_all
 	patches.suse/iommu-Add-IOMMU_DOMAIN_NESTED
+	patches.suse/iommufd-Rename-IOMMUFD_OBJ_HW_PAGETABLE-to-IOMMUFD_OBJ_HWPT_PAGI
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
