--- a/series.conf
+++ b/series.conf
@@ -13172,6 +13172,7 @@
 	patches.suse/iommufd-selftest-Test-IOMMU_HWPT_ALLOC_DIRTY_TRACKING
 	patches.suse/iommufd-selftest-Test-IOMMU_HWPT_SET_DIRTY_TRACKING
 	patches.suse/iommufd-selftest-Test-IOMMU_HWPT_GET_DIRTY_BITMAP
+	patches.suse/iommufd-selftest-Test-out_capabilities-in-IOMMU_GET_HW_INFO
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
