iommu: Add ops->domain_alloc_paging() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14015,6 +14015,7 @@
 	patches.suse/iommu-sun50i-Add-an-IOMMU_IDENTITIY_DOMAIN
 	patches.suse/iommu-Require-a-default_domain-for-all-iommu-drivers
 	patches.suse/iommu-Add-__iommu_group_domain_alloc
+	patches.suse/iommu-Add-ops-domain_alloc_paging
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
