--- a/series.conf
+++ b/series.conf
@@ -13086,6 +13086,7 @@
 	patches.suse/mmc-sdhci-pci-gli-A-workaround-to-allow-GL9750-to-en.patch
 	patches.suse/mmc-meson-gx-Remove-setting-of-CMD_CFG_ERROR.patch
 	patches.suse/cdx-add-support-for-bus-mastering
+	patches.suse/vfio-add-bus-master-feature-to-device-feature-ioctl
 	patches.suse/arm64-tegra-Fix-P3767-card-detect-polarity.patch
 	patches.suse/arm64-tegra-Fix-P3767-QSPI-speed.patch
 	patches.suse/arm64-tegra-Use-correct-interrupts-for-Tegra234-TKE.patch
