--- a/series.conf
+++ b/series.conf
@@ -13981,6 +13981,7 @@
 	patches.suse/iommu-amd-Introduce-helper-functions-for-managing-GCR3-table
 	patches.suse/iommu-amd-Do-not-set-amd_iommu_pgtable-in-pass-through-mode
 	patches.suse/iommu-amd-Miscellaneous-clean-up-when-free-domain
+	patches.suse/iommu-amd-Consolidate-feature-detection-and-reporting-logic
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
