--- a/series.conf
+++ b/series.conf
@@ -14043,6 +14043,7 @@
 	patches.suse/iommu-vt-d-Update-the-definition-of-the-blocking-domain
 	patches.suse/iommu-vt-d-Use-ops-blocked_domain
 	patches.suse/iommufd-Convert-to-alloc_domain_paging
+	patches.suse/iommu-dart-Use-static-global-identity-domains
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
