--- a/series.conf
+++ b/series.conf
@@ -14014,6 +14014,7 @@
 	patches.suse/iommu-mtk_iommu-Add-an-IOMMU_IDENTITIY_DOMAIN
 	patches.suse/iommu-sun50i-Add-an-IOMMU_IDENTITIY_DOMAIN
 	patches.suse/iommu-Require-a-default_domain-for-all-iommu-drivers
+	patches.suse/iommu-Add-__iommu_group_domain_alloc
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
