--- a/series.conf
+++ b/series.conf
@@ -13102,6 +13102,7 @@
 	patches.suse/vfio-cdx-Add-parentheses-between-bitwise-AND-expression-and-logi
 	patches.suse/vfio-Fix-smatch-errors-in-vfio_combine_iova_ranges
 	patches.suse/vfio-mtty-Overhaul-mtty-interrupt-handling
+	patches.suse/vfio-mtty-Enable-migration-support
 	patches.suse/arm64-tegra-Fix-P3767-card-detect-polarity.patch
 	patches.suse/arm64-tegra-Fix-P3767-QSPI-speed.patch
 	patches.suse/arm64-tegra-Use-correct-interrupts-for-Tegra234-TKE.patch
