--- a/series.conf
+++ b/series.conf
@@ -14527,6 +14527,7 @@
 	patches.suse/kprobes-consistent-rcu-api-usage-for-kretprobe-holder.patch
 	patches.suse/rethook-Use-__rcu-pointer-for-rethook-handler.patch
 	patches.suse/vfio-pds-Fix-mutex-lock-magic-lock-warning
+	patches.suse/vfio-pds-Fix-possible-sleep-while-in-atomic-context
 	patches.suse/powerpc-Don-t-clobber-f0-vs0-during-fp-altivec-regis.patch
 	patches.suse/KVM-PPC-Book3S-HV-Fix-KVM_RUN-clobbering-FP-VEC-user.patch
 	patches.suse/firewire-core-fix-possible-memory-leak-in-create_uni.patch
