iommufd/device: Wrap IOMMUFD_OBJ_HWPT_PAGING-only configurations (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13177,6 +13177,7 @@
 	patches.suse/iommufd-Only-enforce-cache-coherency-in-iommufd_hw_pagetable_all
 	patches.suse/iommu-Add-IOMMU_DOMAIN_NESTED
 	patches.suse/iommufd-Rename-IOMMUFD_OBJ_HW_PAGETABLE-to-IOMMUFD_OBJ_HWPT_PAGI
+	patches.suse/iommufd-device-Wrap-IOMMUFD_OBJ_HWPT_PAGING-only-configurations
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
