iommu/arm-smmu-v3: Cleanup arm_smmu_domain_finalise (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13962,6 +13962,7 @@
 	patches.suse/iommu-arm-smmu-v3-move-stall_enabled-to-the-cd-table
 	patches.suse/iommu-arm-smmu-v3-Refactor-write_ctx_desc
 	patches.suse/iommu-arm-smmu-v3-Move-CD-table-to-arm_smmu_master
+	patches.suse/iommu-arm-smmu-v3-Cleanup-arm_smmu_domain_finalise
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
