--- a/series.conf
+++ b/series.conf
@@ -14033,6 +14033,7 @@
 	patches.suse/iommu-Retire-map-unmap-ops
 	patches.suse/iommu-Improve-map-unmap-sanity-checks
 	patches.suse/iommu-iova-Make-the-rcache-depot-scale-better
+	patches.suse/iommu-iova-Manage-the-depot-list-size
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
