--- a/series.conf
+++ b/series.conf
@@ -13955,6 +13955,7 @@
 	patches.suse/xfs-allow-read-IO-and-FICLONE-to-run-concurrently.patch
 	patches.suse/iommu-tegra-smmu-Drop-unnecessary-error-check-for-for-debugfs_cr
 	patches.suse/iommu-arm-smmu-qcom-Add-SDM670-MDSS-compatible
+	patches.suse/iommu-arm-smmu-qcom-Add-SM7150-SMMUv2
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
