iommu: Add generic_single_device_group() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14019,6 +14019,7 @@
 	patches.suse/iommu-Convert-simple-drivers-with-DOMAIN_DMA-to-domain_alloc_pag
 	patches.suse/iommu-Convert-remaining-simple-drivers-to-domain_alloc_paging
 	patches.suse/iommu-Remove-useless-group-refcounting
+	patches.suse/iommu-Add-generic_single_device_group
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
