iommu/qcom_iommu: Add an IOMMU_IDENTITIY_DOMAIN (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14009,6 +14009,7 @@
 	patches.suse/iommu-omap-Implement-an-IDENTITY-domain
 	patches.suse/iommu-msm-Implement-an-IDENTITY-domain
 	patches.suse/iommu-Remove-ops-set_platform_dma_ops
+	patches.suse/iommu-qcom_iommu-Add-an-IOMMU_IDENTITIY_DOMAIN
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
