iommufd: Do not UAF during iommufd_put_object() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14535,6 +14535,7 @@
 	patches.suse/vdpa-mlx5-preserve-CVQ-vringh-index.patch
 	patches.suse/iommufd-selftest-Fix-_test_mock_dirty_bitmaps
 	patches.suse/iommufd-Add-iommufd_ctx-to-iommufd_put_object
+	patches.suse/iommufd-Do-not-UAF-during-iommufd_put_object
 	patches.suse/x86-coco-Disable-32-bit-emulation-by-default-on-TDX-.patch
 	patches.suse/x86-entry-convert-int-0x80-emulation-to-idtentry.patch
 	patches.suse/x86-entry-do-not-allow-external-0x80-interrupts.patch
