--- a/series.conf
+++ b/series.conf
@@ -14016,6 +14016,7 @@
 	patches.suse/iommu-Require-a-default_domain-for-all-iommu-drivers
 	patches.suse/iommu-Add-__iommu_group_domain_alloc
 	patches.suse/iommu-Add-ops-domain_alloc_paging
+	patches.suse/iommu-Convert-simple-drivers-with-DOMAIN_DMA-to-domain_alloc_pag
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
