--- a/series.conf
+++ b/series.conf
@@ -13975,6 +13975,7 @@
 	patches.suse/iommu-vt-d-debugfs-Support-dumping-a-specified-page-table
 	patches.suse/Revert-iommu-vt-d-Remove-unused-function
 	patches.suse/iommu-amd-Remove-unused-amd_io_pgtable.pt_root-variable
+	patches.suse/iommu-amd-Consolidate-timeout-pre-define-to-amd_iommu_type.h
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
