--- a/series.conf
+++ b/series.conf
@@ -13180,6 +13180,7 @@
 	patches.suse/iommufd-device-Wrap-IOMMUFD_OBJ_HWPT_PAGING-only-configurations
 	patches.suse/iommufd-Derive-iommufd_hwpt_paging-from-iommufd_hw_pagetable
 	patches.suse/iommufd-Share-iommufd_hwpt_alloc-with-IOMMUFD_OBJ_HWPT_NESTED
+	patches.suse/iommu-Pass-in-parent-domain-with-user_data-to-domain_alloc_user-
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
