iommu/mtk_iommu_v1: Implement an IDENTITY domain (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14000,6 +14000,7 @@
 	patches.suse/iommu-Add-IOMMU_DOMAIN_PLATFORM-for-S390
 	patches.suse/iommu-fsl_pamu-Implement-a-PLATFORM-domain
 	patches.suse/iommu-tegra-gart-Remove-tegra-gart
+	patches.suse/iommu-mtk_iommu_v1-Implement-an-IDENTITY-domain
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
