iommu/dart: Call apple_dart_finalize_domain() as part of alloc_paging() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14046,6 +14046,7 @@
 	patches.suse/iommu-dart-Use-static-global-identity-domains
 	patches.suse/iommu-dart-Move-the-blocked-domain-support-to-a-global-static
 	patches.suse/iommu-dart-Convert-to-domain_alloc_paging
+	patches.suse/iommu-dart-Call-apple_dart_finalize_domain-as-part-of-alloc_pagi
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
