--- a/series.conf
+++ b/series.conf
@@ -13164,6 +13164,7 @@
 	patches.suse/iommufd-Add-IOMMU_HWPT_SET_DIRTY_TRACKING
 	patches.suse/iommufd-Add-IOMMU_HWPT_GET_DIRTY_BITMAP
 	patches.suse/iommufd-Add-capabilities-to-IOMMU_GET_HW_INFO
+	patches.suse/iommufd-Add-a-flag-to-skip-clearing-of-IOPTE-dirty
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
