--- a/series.conf
+++ b/series.conf
@@ -13992,6 +13992,7 @@
 	patches.suse/iommu-amd-Remove-PPR-support
 	patches.suse/iommu-amd-Remove-amd_iommu_device_info
 	patches.suse/iommu-amd-Remove-unused-EXPORT_SYMBOLS
+	patches.suse/Revert-iommu-Fix-false-ownership-failure-on-AMD-systems-with-PAS
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
