--- a/series.conf
+++ b/series.conf
@@ -13196,6 +13196,7 @@
 	patches.suse/iommu-vt-d-Disallow-read-only-mappings-to-nest-parent-domain
 	patches.suse/iommufd-Fix-missing-update-of-domains_itree-after-splitting-iopt
 	patches.suse/iommufd-Add-iopt_area_alloc
+	patches.suse/iommufd-selftest-Fix-page-size-check-in-iommufd_test_dirty
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
