--- a/series.conf
+++ b/series.conf
@@ -13192,6 +13192,7 @@
 	patches.suse/iommu-vt-d-Add-helper-to-setup-pasid-nested-translation
 	patches.suse/iommu-vt-d-Make-domain-attach-helpers-to-be-extern
 	patches.suse/iommu-vt-d-Set-the-nested-domain-to-a-device
+	patches.suse/iommu-vt-d-Add-nested-domain-allocation
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
