iommu: Add IOMMU_DOMAIN_PLATFORM (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13995,6 +13995,7 @@
 	patches.suse/Revert-iommu-Fix-false-ownership-failure-on-AMD-systems-with-PAS
 	patches.suse/iommu-amd-Remove-DMA_FQ-type-from-domain-allocation-path
 	patches.suse/iommu-Add-iommu_ops-identity_domain
+	patches.suse/iommu-Add-IOMMU_DOMAIN_PLATFORM
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
