iommu: Remove ops->set_platform_dma_ops() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14008,6 +14008,7 @@
 	patches.suse/iommu-tegra-smmu-Support-DMA-domains-in-tegra
 	patches.suse/iommu-omap-Implement-an-IDENTITY-domain
 	patches.suse/iommu-msm-Implement-an-IDENTITY-domain
+	patches.suse/iommu-Remove-ops-set_platform_dma_ops
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
