--- a/series.conf
+++ b/series.conf
@@ -13184,6 +13184,7 @@
 	patches.suse/iommufd-Add-a-nested-HW-pagetable-object
 	patches.suse/iommu-Add-iommu_copy_struct_from_user-helper
 	patches.suse/iommufd-selftest-Add-nested-domain-allocation-for-mock-domain
+	patches.suse/iommufd-selftest-Add-coverage-for-IOMMU_HWPT_ALLOC-with-nested-H
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
