iommufd: Only enforce cache coherency in iommufd_hw_pagetable_alloc (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13174,6 +13174,7 @@
 	patches.suse/iommufd-selftest-Test-IOMMU_HWPT_GET_DIRTY_BITMAP
 	patches.suse/iommufd-selftest-Test-out_capabilities-in-IOMMU_GET_HW_INFO
 	patches.suse/iommufd-selftest-Test-IOMMU_HWPT_GET_DIRTY_BITMAP_NO_CLEAR-flag
+	patches.suse/iommufd-Only-enforce-cache-coherency-in-iommufd_hw_pagetable_all
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
