iommu: Add iommu_domain ops for dirty tracking (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13159,6 +13159,7 @@
 	patches.suse/vfio-iova_bitmap-Export-more-API-symbols
 	patches.suse/vfio-Move-iova_bitmap-into-iommufd
 	patches.suse/iommufd-iova_bitmap-Move-symbols-to-IOMMUFD-namespace
+	patches.suse/iommu-Add-iommu_domain-ops-for-dirty-tracking
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
