--- a/series.conf
+++ b/series.conf
@@ -14002,6 +14002,7 @@
 	patches.suse/iommu-tegra-gart-Remove-tegra-gart
 	patches.suse/iommu-mtk_iommu_v1-Implement-an-IDENTITY-domain
 	patches.suse/iommu-Reorganize-iommu_get_default_domain_type-to-respect-def_do
+	patches.suse/iommu-Allow-an-IDENTITY-domain-as-the-default_domain-in-ARM32
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
