iommu/amd: Remove unused EXPORT_SYMBOLS (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13991,6 +13991,7 @@
 	patches.suse/iommu-amd-Remove-iommu_v2-module
 	patches.suse/iommu-amd-Remove-PPR-support
 	patches.suse/iommu-amd-Remove-amd_iommu_device_info
+	patches.suse/iommu-amd-Remove-unused-EXPORT_SYMBOLS
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
