iommu/omap: Convert to generic_single_device_group() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14024,6 +14024,7 @@
 	patches.suse/iommu-sprd-Convert-to-generic_single_device_group
 	patches.suse/iommu-rockchip-Convert-to-generic_single_device_group
 	patches.suse/iommu-ipmmu-vmsa-Convert-to-generic_single_device_group
+	patches.suse/iommu-omap-Convert-to-generic_single_device_group
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
