--- a/series.conf
+++ b/series.conf
@@ -13153,6 +13153,7 @@
 	patches.suse/iommufd-Flow-user-flags-for-domain-allocation-to-domain_alloc_us
 	patches.suse/iommufd-Support-allocating-nested-parent-domain
 	patches.suse/iommufd-selftest-Add-domain_alloc_user-support-in-iommu-mock
+	patches.suse/iommu-vt-d-Add-domain_alloc_user-op
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
