--- a/series.conf
+++ b/series.conf
@@ -13158,6 +13158,7 @@
 	patches.suse/iommufd-Correct-IOMMU_HWPT_ALLOC_NEST_PARENT-description
 	patches.suse/vfio-iova_bitmap-Export-more-API-symbols
 	patches.suse/vfio-Move-iova_bitmap-into-iommufd
+	patches.suse/iommufd-iova_bitmap-Move-symbols-to-IOMMUFD-namespace
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
