--- a/series.conf
+++ b/series.conf
@@ -13965,6 +13965,7 @@
 	patches.suse/iommu-arm-smmu-v3-Cleanup-arm_smmu_domain_finalise
 	patches.suse/iommu-arm-smmu-v3-Update-comment-about-STE-liveness
 	patches.suse/iommu-arm-smmu-v3-Rename-cdcfg-to-cd_table
+	patches.suse/iommu-arm-smmu-v3-sva-Remove-unused-iommu_sva-handle
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
