iommu: change iommu_map_sgtable to return signed values (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14038,6 +14038,7 @@
 	patches.suse/iommu-Do-not-use-IOMMU_DOMAIN_DMA-if-CONFIG_IOMMU_DMA-is-not-ena
 	patches.suse/iommu-Fix-return-code-in-iommu_group_alloc_default_domain
 	patches.suse/powerpc-iommu-Do-not-do-platform-domain-attach-atctions-after-pr
+	patches.suse/iommu-change-iommu_map_sgtable-to-return-signed-values
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
