vfio/pds: Fix mutex lock->magic != lock warning (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14526,6 +14526,7 @@
 	patches.suse/powercap-DTPM-Fix-unneeded-conversions-to-micro-Watt.patch
 	patches.suse/kprobes-consistent-rcu-api-usage-for-kretprobe-holder.patch
 	patches.suse/rethook-Use-__rcu-pointer-for-rethook-handler.patch
+	patches.suse/vfio-pds-Fix-mutex-lock-magic-lock-warning
 	patches.suse/powerpc-Don-t-clobber-f0-vs0-during-fp-altivec-regis.patch
 	patches.suse/KVM-PPC-Book3S-HV-Fix-KVM_RUN-clobbering-FP-VEC-user.patch
 	patches.suse/firewire-core-fix-possible-memory-leak-in-create_uni.patch
