Revert "iommu/vt-d: Remove unused function" (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13973,6 +13973,7 @@
 	patches.suse/iommu-vt-d-debugfs-Dump-entry-pointing-to-huge-page
 	patches.suse/iommu-vt-d-debugfs-Create-remove-debugfs-file-per-device-pasid
 	patches.suse/iommu-vt-d-debugfs-Support-dumping-a-specified-page-table
+	patches.suse/Revert-iommu-vt-d-Remove-unused-function
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
