--- a/series.conf
+++ b/series.conf
@@ -13967,6 +13967,7 @@
 	patches.suse/iommu-arm-smmu-v3-Rename-cdcfg-to-cd_table
 	patches.suse/iommu-arm-smmu-v3-sva-Remove-unused-iommu_sva-handle
 	patches.suse/iommu-arm-smmu-v3-sva-Remove-bond-refcount
+	patches.suse/dt-bindings-arm-smmu-Add-SM7150-GPU-SMMUv2
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
