--- a/series.conf
+++ b/series.conf
@@ -13194,6 +13194,7 @@
 	patches.suse/iommu-vt-d-Set-the-nested-domain-to-a-device
 	patches.suse/iommu-vt-d-Add-nested-domain-allocation
 	patches.suse/iommu-vt-d-Disallow-read-only-mappings-to-nest-parent-domain
+	patches.suse/iommufd-Fix-missing-update-of-domains_itree-after-splitting-iopt
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
