--- a/series.conf
+++ b/series.conf
@@ -14045,6 +14045,7 @@
 	patches.suse/iommufd-Convert-to-alloc_domain_paging
 	patches.suse/iommu-dart-Use-static-global-identity-domains
 	patches.suse/iommu-dart-Move-the-blocked-domain-support-to-a-global-static
+	patches.suse/iommu-dart-Convert-to-domain_alloc_paging
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
