--- a/series.conf
+++ b/series.conf
@@ -13169,6 +13169,7 @@
 	patches.suse/iommu-amd-Access-Dirty-bit-support-in-IOPTEs
 	patches.suse/iommu-vt-d-Access-Dirty-bit-support-for-SS-domains
 	patches.suse/iommufd-selftest-Expand-mock_domain-with-dev_flags
+	patches.suse/iommufd-selftest-Test-IOMMU_HWPT_ALLOC_DIRTY_TRACKING
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
