--- a/series.conf
+++ b/series.conf
@@ -13983,6 +13983,7 @@
 	patches.suse/iommu-amd-Miscellaneous-clean-up-when-free-domain
 	patches.suse/iommu-amd-Consolidate-feature-detection-and-reporting-logic
 	patches.suse/iommu-amd-Modify-logic-for-checking-GT-and-PPR-features
+	patches.suse/iommu-amd-Rename-ats-related-variables
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
