--- a/series.conf
+++ b/series.conf
@@ -14021,6 +14021,7 @@
 	patches.suse/iommu-Remove-useless-group-refcounting
 	patches.suse/iommu-Add-generic_single_device_group
 	patches.suse/iommu-sun50i-Convert-to-generic_single_device_group
+	patches.suse/iommu-sprd-Convert-to-generic_single_device_group
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
