--- a/series.conf
+++ b/series.conf
@@ -14049,6 +14049,7 @@
 	patches.suse/iommu-dart-Call-apple_dart_finalize_domain-as-part-of-alloc_pagi
 	patches.suse/iommu-dart-Remove-the-force_bypass-variable
 	patches.suse/iommu-Allow-.iotlb_sync_map-to-fail-and-handle-s390-s-ENOMEM-ret
+	patches.suse/s390-pci-prepare-is_passed_through-for-dma-iommu
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
