iommu/arm-smmu-v3: Move CD table to arm_smmu_master (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13961,6 +13961,7 @@
 	patches.suse/iommu-arm-smmu-v3-Encapsulate-ctx_desc_cfg-init-in-alloc_cd_tabl
 	patches.suse/iommu-arm-smmu-v3-move-stall_enabled-to-the-cd-table
 	patches.suse/iommu-arm-smmu-v3-Refactor-write_ctx_desc
+	patches.suse/iommu-arm-smmu-v3-Move-CD-table-to-arm_smmu_master
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
