iommu/dma: Allow a single FQ in addition to per-CPU FQs (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14052,6 +14052,7 @@
 	patches.suse/s390-pci-prepare-is_passed_through-for-dma-iommu
 	patches.suse/s390-pci-Use-dma-iommu-layer
 	patches.suse/iommu-s390-Disable-deferred-flush-for-ISM-devices
+	patches.suse/iommu-dma-Allow-a-single-FQ-in-addition-to-per-CPU-FQs
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
