iommu/vt-d: Support enforce_cache_coherency only for empty domains (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14511,6 +14511,7 @@
 	patches.suse/iommu-Flow-ERR_PTR-out-from-__iommu_domain_alloc
 	patches.suse/MAINTAINERS-list-all-Qualcomm-IOMMU-drivers-in-the-QUALCOMM-IOMM
 	patches.suse/iommu-Avoid-more-races-around-device-probe
+	patches.suse/iommu-vt-d-Support-enforce_cache_coherency-only-for-empty-domain
 	patches.suse/ACPI-video-Use-acpi_video_device-for-cooling-dev-dri.patch
 	patches.suse/cpufreq-amd-pstate-Fix-the-return-value-of-amd_pstat.patch
 	patches.suse/cpufreq-amd-pstate-Fix-scaling_min_freq-and-scaling_.patch
