iommu/vt-d: Enhance capability check for nested parent domain allocation (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13185,6 +13185,7 @@
 	patches.suse/iommu-Add-iommu_copy_struct_from_user-helper
 	patches.suse/iommufd-selftest-Add-nested-domain-allocation-for-mock-domain
 	patches.suse/iommufd-selftest-Add-coverage-for-IOMMU_HWPT_ALLOC-with-nested-H
+	patches.suse/iommu-vt-d-Enhance-capability-check-for-nested-parent-domain-all
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
