iommu/amd: Introduce iommu_dev_data.ppr (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -13984,6 +13984,7 @@
 	patches.suse/iommu-amd-Consolidate-feature-detection-and-reporting-logic
 	patches.suse/iommu-amd-Modify-logic-for-checking-GT-and-PPR-features
 	patches.suse/iommu-amd-Rename-ats-related-variables
+	patches.suse/iommu-amd-Introduce-iommu_dev_data.ppr
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
