iommu: Remove duplicate include (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14034,6 +14034,7 @@
 	patches.suse/iommu-Improve-map-unmap-sanity-checks
 	patches.suse/iommu-iova-Make-the-rcache-depot-scale-better
 	patches.suse/iommu-iova-Manage-the-depot-list-size
+	patches.suse/iommu-Remove-duplicate-include
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
