iommufd: Convert to alloc_domain_paging() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14042,6 +14042,7 @@
 	patches.suse/iommu-Move-IOMMU_DOMAIN_BLOCKED-global-statics-to-ops-blocked_do
 	patches.suse/iommu-vt-d-Update-the-definition-of-the-blocking-domain
 	patches.suse/iommu-vt-d-Use-ops-blocked_domain
+	patches.suse/iommufd-Convert-to-alloc_domain_paging
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
