iommu: Allow .iotlb_sync_map to fail and handle s390's -ENOMEM return (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -14048,6 +14048,7 @@
 	patches.suse/iommu-dart-Convert-to-domain_alloc_paging
 	patches.suse/iommu-dart-Call-apple_dart_finalize_domain-as-part-of-alloc_pagi
 	patches.suse/iommu-dart-Remove-the-force_bypass-variable
+	patches.suse/iommu-Allow-.iotlb_sync_map-to-fail-and-handle-s390-s-ENOMEM-ret
 	patches.suse/pwm-sti-Reduce-number-of-allocations-and-drop-usage-.patch
 	patches.suse/pwm-brcmstb-Utilize-appropriate-clock-APIs-in-suspen.patch
 	patches.suse/watchdog-of_xilinx_wdt-Remove-unnecessary-clock-disa.patch
