serial: core: fix kernel-doc for uart_port_unlock_irqrestore() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13267,6 +13267,7 @@
 	patches.kernel.org/6.1.76-182-mips-Call-lose_fpu-0-before-initializing-fcr31.patch
 	patches.kernel.org/6.1.76-183-tick-sched-Preserve-number-of-idle-sleeps-acro.patch
 	patches.kernel.org/6.1.76-184-x86-entry-ia32-Ensure-s32-is-sign-extended-to-.patch
+	patches.kernel.org/6.1.76-185-serial-core-fix-kernel-doc-for-uart_port_unloc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
