=?UTF-8?q?cxl/region=EF=BC=9AFix=20overflow=20issue=20in?= =?UTF-8?q?=20alloc=5Fhpa()?= (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13263,6 +13263,7 @@
 	patches.kernel.org/6.1.76-178-spi-bcm-qspi-fix-SFDP-BFPT-read-by-usig-mspi-r.patch
 	patches.kernel.org/6.1.76-179-spi-fix-finalize-message-on-error-return.patch
 	patches.kernel.org/6.1.76-180-MIPS-lantiq-register-smp_ops-on-non-smp-platfo.patch
+	patches.kernel.org/6.1.76-181-cxl-region-Fix-overflow-issue-in-alloc_hpa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
