thermal: intel: hfi: Disable an HFI instance when all its CPUs go offline (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13231,6 +13231,7 @@
 	patches.kernel.org/6.1.76-146-PM-core-Remove-unnecessary-void-conversions.patch
 	patches.kernel.org/6.1.76-147-PM-sleep-Fix-possible-deadlocks-in-core-system.patch
 	patches.kernel.org/6.1.76-148-thermal-intel-hfi-Refactor-enabling-code-into-.patch
+	patches.kernel.org/6.1.76-149-thermal-intel-hfi-Disable-an-HFI-instance-when.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
