tick/sched: Preserve number of idle sleeps across CPU hotplug events (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13265,6 +13265,7 @@
 	patches.kernel.org/6.1.76-180-MIPS-lantiq-register-smp_ops-on-non-smp-platfo.patch
 	patches.kernel.org/6.1.76-181-cxl-region-Fix-overflow-issue-in-alloc_hpa.patch
 	patches.kernel.org/6.1.76-182-mips-Call-lose_fpu-0-before-initializing-fcr31.patch
+	patches.kernel.org/6.1.76-183-tick-sched-Preserve-number-of-idle-sleeps-acro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
