drm/bridge: sii902x: Use devm_regulator_bulk_get_enable() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13250,6 +13250,7 @@
 	patches.kernel.org/6.1.76-165-Revert-powerpc-64s-Increase-default-stack-size.patch
 	patches.kernel.org/6.1.76-166-drm-bridge-parade-ps8640-Wait-for-HPD-when-doi.patch
 	patches.kernel.org/6.1.76-167-drm-panel-simple-add-missing-bus-flags-for-Tia.patch
+	patches.kernel.org/6.1.76-168-drm-bridge-sii902x-Use-devm_regulator_bulk_get.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
