drm/bridge: parade-ps8640: Make sure we drop the AUX mutex in the error case (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13254,6 +13254,7 @@
 	patches.kernel.org/6.1.76-169-drm-bridge-sii902x-Fix-probing-race-issue.patch
 	patches.kernel.org/6.1.76-170-drm-bridge-sii902x-Fix-audio-codec-unregistrat.patch
 	patches.kernel.org/6.1.76-171-drm-bridge-parade-ps8640-Ensure-bridge-is-susp.patch
+	patches.kernel.org/6.1.76-172-drm-bridge-parade-ps8640-Make-sure-we-drop-the.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
