net/mlx5e: Handle hardware IPsec limits events (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13268,6 +13268,7 @@
 	patches.kernel.org/6.1.76-183-tick-sched-Preserve-number-of-idle-sleeps-acro.patch
 	patches.kernel.org/6.1.76-184-x86-entry-ia32-Ensure-s32-is-sign-extended-to-.patch
 	patches.kernel.org/6.1.76-185-serial-core-fix-kernel-doc-for-uart_port_unloc.patch
+	patches.kernel.org/6.1.76-186-net-mlx5e-Handle-hardware-IPsec-limits-events.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
