drm/exynos: fix accidental on-stack copy of exynos_drm_plane (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13255,6 +13255,7 @@
 	patches.kernel.org/6.1.76-170-drm-bridge-sii902x-Fix-audio-codec-unregistrat.patch
 	patches.kernel.org/6.1.76-171-drm-bridge-parade-ps8640-Ensure-bridge-is-susp.patch
 	patches.kernel.org/6.1.76-172-drm-bridge-parade-ps8640-Make-sure-we-drop-the.patch
+	patches.kernel.org/6.1.76-173-drm-exynos-fix-accidental-on-stack-copy-of-exy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
