mips: Call lose_fpu(0) before initializing fcr31 in mips_set_personality_nan (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13264,6 +13264,7 @@
 	patches.kernel.org/6.1.76-179-spi-fix-finalize-message-on-error-return.patch
 	patches.kernel.org/6.1.76-180-MIPS-lantiq-register-smp_ops-on-non-smp-platfo.patch
 	patches.kernel.org/6.1.76-181-cxl-region-Fix-overflow-issue-in-alloc_hpa.patch
+	patches.kernel.org/6.1.76-182-mips-Call-lose_fpu-0-before-initializing-fcr31.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
