fs/pipe: move check to pipe_has_watch_queue() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13233,6 +13233,7 @@
 	patches.kernel.org/6.1.76-148-thermal-intel-hfi-Refactor-enabling-code-into-.patch
 	patches.kernel.org/6.1.76-149-thermal-intel-hfi-Disable-an-HFI-instance-when.patch
 	patches.kernel.org/6.1.76-150-thermal-intel-hfi-Add-syscore-callbacks-for-sy.patch
+	patches.kernel.org/6.1.76-151-fs-pipe-move-check-to-pipe_has_watch_queue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
