serial: core: Provide port lock wrappers (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13241,6 +13241,7 @@
 	patches.kernel.org/6.1.76-156-ARM-dts-qcom-sdx55-fix-USB-DP-DM-HS-PHY-interr.patch
 	patches.kernel.org/6.1.76-157-ARM-dts-qcom-sdx55-fix-USB-SS-wakeup.patch
 	patches.kernel.org/6.1.76-158-dlm-use-kernel_connect-and-kernel_bind.patch
+	patches.kernel.org/6.1.76-159-serial-core-Provide-port-lock-wrappers.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
