ARM: dts: qcom: sdx55: fix USB wakeup interrupt types (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13235,6 +13235,7 @@
 	patches.kernel.org/6.1.76-150-thermal-intel-hfi-Add-syscore-callbacks-for-sy.patch
 	patches.kernel.org/6.1.76-151-fs-pipe-move-check-to-pipe_has_watch_queue.patch
 	patches.kernel.org/6.1.76-152-pipe-wakeup-wr_wait-after-setting-max_usage.patch
+	patches.kernel.org/6.1.76-153-ARM-dts-qcom-sdx55-fix-USB-wakeup-interrupt-ty.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
