Revert "powerpc/64s: Increase default stack size to 32KB" (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13247,6 +13247,7 @@
 	patches.kernel.org/6.1.76-162-btrfs-zoned-factor-out-prepare_allocation_zone.patch
 	patches.kernel.org/6.1.76-163-btrfs-zoned-optimize-hint-byte-for-zoned-alloc.patch
 	patches.kernel.org/6.1.76-164-drm-panel-edp-drm-panel-edp-Fix-AUO-B116XAK01-.patch
+	patches.kernel.org/6.1.76-165-Revert-powerpc-64s-Increase-default-stack-size.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
