--- a/series.conf
+++ b/series.conf
@@ -13269,6 +13269,7 @@
 	patches.kernel.org/6.1.76-184-x86-entry-ia32-Ensure-s32-is-sign-extended-to-.patch
 	patches.kernel.org/6.1.76-185-serial-core-fix-kernel-doc-for-uart_port_unloc.patch
 	patches.kernel.org/6.1.76-186-net-mlx5e-Handle-hardware-IPsec-limits-events.patch
+	patches.kernel.org/6.1.76-187-Linux-6.1.76.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
