thermal: intel: hfi: Add syscore callbacks for system-wide PM (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13232,6 +13232,7 @@
 	patches.kernel.org/6.1.76-147-PM-sleep-Fix-possible-deadlocks-in-core-system.patch
 	patches.kernel.org/6.1.76-148-thermal-intel-hfi-Refactor-enabling-code-into-.patch
 	patches.kernel.org/6.1.76-149-thermal-intel-hfi-Disable-an-HFI-instance-when.patch
+	patches.kernel.org/6.1.76-150-thermal-intel-hfi-Add-syscore-callbacks-for-sy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
