btrfs: zoned: optimize hint byte for zoned allocator (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13245,6 +13245,7 @@
 	patches.kernel.org/6.1.76-160-serial-sc16is7xx-Use-port-lock-wrappers.patch
 	patches.kernel.org/6.1.76-161-serial-sc16is7xx-fix-unconditional-activation-.patch
 	patches.kernel.org/6.1.76-162-btrfs-zoned-factor-out-prepare_allocation_zone.patch
+	patches.kernel.org/6.1.76-163-btrfs-zoned-optimize-hint-byte-for-zoned-alloc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
