drm: panel-simple: add missing bus flags for Tianma tm070jvhg[30/33] (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13249,6 +13249,7 @@
 	patches.kernel.org/6.1.76-164-drm-panel-edp-drm-panel-edp-Fix-AUO-B116XAK01-.patch
 	patches.kernel.org/6.1.76-165-Revert-powerpc-64s-Increase-default-stack-size.patch
 	patches.kernel.org/6.1.76-166-drm-bridge-parade-ps8640-Wait-for-HPD-when-doi.patch
+	patches.kernel.org/6.1.76-167-drm-panel-simple-add-missing-bus-flags-for-Tia.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
