spi: fix finalize message on error return (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -13261,6 +13261,7 @@
 	patches.kernel.org/6.1.76-176-block-Move-checking-GENHD_FL_NO_PART-to-bdev_a.patch
 	patches.kernel.org/6.1.76-177-drm-bridge-anx7625-Ensure-bridge-is-suspended-.patch
 	patches.kernel.org/6.1.76-178-spi-bcm-qspi-fix-SFDP-BFPT-read-by-usig-mspi-r.patch
+	patches.kernel.org/6.1.76-179-spi-fix-finalize-message-on-error-return.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
