- vfio: Move iova_bitmap into iommufd (jsc#PED-7779 jsc#PED-7780). - Update config files.

--- a/series.conf
+++ b/series.conf
@@ -13157,6 +13157,7 @@
 	patches.suse/iommufd-selftest-Rework-TEST_LENGTH-to-test-min_size-explicitly
 	patches.suse/iommufd-Correct-IOMMU_HWPT_ALLOC_NEST_PARENT-description
 	patches.suse/vfio-iova_bitmap-Export-more-API-symbols
+	patches.suse/vfio-Move-iova_bitmap-into-iommufd
 	patches.suse/kunit-Fix-missed-memory-release-in-kunit_free_suite_.patch
 	patches.suse/selftests-pidfd-Fix-ksft-print-formats.patch
 	patches.suse/selftests-resctrl-Ensure-the-benchmark-commands-fits.patch
