maple_tree: change mas_adopt_children() parent usage (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -8051,6 +8051,7 @@
 	patches.suse/maple_tree-reorder-replacement-of-nodes-to-avoid-liv.patch
 	patches.suse/maple_tree-introduce-mas_put_in_tree.patch
 	patches.suse/maple_tree-introduce-mas_tree_parent-definition.patch
+	patches.suse/maple_tree-change-mas_adopt_children-parent-usage.patch
 	patches.suse/mm-compaction-correct-last_migrated_pfn-update-in-compact_zone.patch
 	patches.suse/mm-compaction-skip-page-block-marked-skip-in-isolate_migratepages_block.patch
 	patches.suse/mm-compaction-correct-comment-of-fast_find_migrateblock-in-isolate_migratepages.patch
