maple_tree: introduce mas_put_in_tree() (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -8049,6 +8049,7 @@
 	patches.suse/mm-hugetlb-use-flush_hugetlb_tlb_range-in-move_huget.patch
 	patches.suse/maple_tree-add-hex-output-to-maple_arange64-dump.patch
 	patches.suse/maple_tree-reorder-replacement-of-nodes-to-avoid-liv.patch
+	patches.suse/maple_tree-introduce-mas_put_in_tree.patch
 	patches.suse/mm-compaction-correct-last_migrated_pfn-update-in-compact_zone.patch
 	patches.suse/mm-compaction-skip-page-block-marked-skip-in-isolate_migratepages_block.patch
 	patches.suse/mm-compaction-correct-comment-of-fast_find_migrateblock-in-isolate_migratepages.patch
