maple_tree: add format option to mt_dump() (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -769,6 +769,7 @@
 	patches.suse/0024-mm-gup-remove-unused-vmas-parameter-from-get_user_pa.patch
 	patches.suse/mm-convert-migrate_pages-to-work-on-folios.patch
 	patches.suse/maple_tree-clean-up-mas_parent_enum-and-rename-to-ma.patch
+	patches.suse/maple_tree-add-format-option-to-mt_dump.patch
 	patches.suse/maple_tree-add-__init-and-__exit-to-test-module.patch
 	patches.suse/mm-page_alloc-set-sysctl_lowmem_reserve_ratio-storage-class-specifier-to-static.patch
 	patches.suse/mm-compaction-remove-compaction-result-helpers.patch
